# xmodem-send

./: .gitignore  .hgignore  CMakeLists.txt  app-info.h  crc16-xmodem.c  crc16-xmodem.h  main.cpp  mainwindow.cpp  mainwindow.h  transfer.cpp  transfer.h  xmodem-send.pro
icon/: COPYING.txt
translations/: xmodem-send_es.qm  xmodem-send_es.ts
